Simple Format comment text for paragraphs, and also use auto_link to make links

--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -10,7 +10,7 @@
 		</span>
 	</div>
 	<div class="comment-content well">
-		<%= "#{comment['content']}" %>
+		<%= auto_link(simple_format("#{comment['content']}")) %>
 	</div>
 	<div class="footer">
 		<small>
