--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -23,3 +23,12 @@
 	text-align: center;
 	display: block;
 }
+
+.popover {
+	text-align: center;
+	.confirm-text {
+		margin-bottom: 5px;
+		margin-left: 15px;
+		margin-right: 15px;
+	}
+}
