--- a/app/views/comments/_confirm_delete.html.erb
+++ b/app/views/comments/_confirm_delete.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="confirm-text">
 	Deleting is forever!
-	<button class="btn btn-danger" id="confirm-delete">Delete Comment</button>
 </div>
+<button class="btn btn-danger btn-sm" id="confirm-delete">Delete Comment</button>
