Enforced special abilities for designers and reviewers regarding which requests they can see. Also show asset link only to designers

--- a/app/views/publication_requests/show.html.erb
+++ b/app/views/publication_requests/show.html.erb
@@ -16,8 +16,8 @@
 			</div>
 			<div class="panel-footer">
 				<p><%= @publication_request["template"]["name"] %>, <%= @publication_request["template"]["dimensions"] %></p>
-				<% if @publication_request["template"]["url"] %>
-					<pre><%= @publication_request["template"]["url"] %> </pre>
+				<% if (@publication_request["template"]["link"] != "") && (can? :design, PublicationRequest.find(@publication_request['id'])) %>
+					<pre><%= link_to("Download Assets", @publication_request["template"]["link"], :target => "_blank") %> </pre>
 				<% end %>
 			</div>
 		</div>
