Added attachment image link

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -32,3 +32,11 @@
 		margin-right: 15px;
 	}
 }
+
+.attachment-link {
+	padding: 10px;
+	border-radius: 3px;
+	&:hover {
+		background-color: $gray-lighter;
+	}
+}
