--- a/app/views/publication_requests/show.html.erb
+++ b/app/views/publication_requests/show.html.erb
@@ -83,8 +83,10 @@
 					<%= f.label :content, "Add Comment", class: "control-label"%>
 					<%= f.text_area :content, class: "form-control", placeholder: "Write a comment...", rows: "3" %>
 				</div>
-
 				<%= f.submit("Comment", id: "comment-btn", class: "btn btn-primary", remote: true, disabled: true) %>
+				<a class="attachment-btn" href="#" title="Add an attachment..." data-toggle="tooltip" data-placement="top">
+					<span class="attachment-link glyphicon glyphicon-paperclip"></span>
+				</a>
 			<% end %>
 			<hr>
 		</div>
