--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,3 +54,58 @@
 textarea {
 	resize: vertical;
 }
+
+.popup-list {
+	list-style: none;
+	padding: 0px;
+
+	li {
+		text-align: left;
+		height: 26px;
+		font-weight: bold;
+		&:hover {
+			background-color: $brand-primary;
+			color: white;
+			cursor: pointer;
+			a {
+				background-color: $brand-primary;
+				color: white;
+				text-decoration: none;
+			}
+		}
+		a {
+			display: block;
+			width: 100%;
+			height: 100%;
+			margin: 4px 0;
+    		padding: 3px 5px;
+			a:hover {
+				
+			}
+		}
+	}
+}
+
+.uploader {
+	position: relative;
+
+	.fakefile {
+		position: relative;
+		display: block;
+		z-index: 1;
+		
+	}
+
+	.new_request_attachment {
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		z-index: 2;
+		height: 100%;
+		input[type=file] {
+			opacity: 0;
+			width: 100%;
+			height: 100%;
+		}
+	}
+}
