--- a/app/views/publication_requests/show.html.erb
+++ b/app/views/publication_requests/show.html.erb
@@ -72,6 +72,14 @@
 
 <hr>
 
+<div class="row">
+	<div id="attachments" class="col-md-offset-1 col-md-5 col-xs-12">
+		<% @publication_request["request_attachments"].each do |attachment| %>
+			<%= render partial: "/request_attachments/show", locals: { attachment: attachment } %>
+		<% end %>
+	</div>
+</div>
+
 <div id="comments-area">
 
 	<div class="row">
