--- a/app/views/publication_requests/show.html.erb
+++ b/app/views/publication_requests/show.html.erb
@@ -1,4 +1,5 @@
 <%= stylesheet_link_tag "comments" %>
+<%= stylesheet_link_tag "request_attachments" %>
 <%= javascript_include_tag "comments" %>
 
 <div class="page-header">
@@ -72,11 +73,21 @@
 
 <hr>
 
-<div class="row">
-	<div id="attachments" class="col-md-offset-1 col-md-5 col-xs-12">
-		<% @publication_request["request_attachments"].each do |attachment| %>
-			<%= render partial: "/request_attachments/show", locals: { attachment: attachment } %>
-		<% end %>
+<div id="attachments-area">
+	<div class="row">
+		<div class="col-md-offset-1 col-md-5 col-xs-12">
+			<% if @publication_request["request_attachments"].any? %>
+				<h2><span class="glyphicon glyphicon-paperclip"></span> Attachments</h2>
+			<% end %>
+		</div>
+	</div>
+
+	<div class="row">
+		<div id="attachments" class="col-md-offset-1 col-md-5 col-xs-12">
+			<% @publication_request["request_attachments"].each do |attachment| %>
+				<%= render partial: "/request_attachments/show", locals: { attachment: attachment } %>
+			<% end %>
+		</div>
 	</div>
 </div>
 
