--- a/app/assets/stylesheets/request_attachments.scss
+++ b/app/assets/stylesheets/request_attachments.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the request_attachments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "bootstrap";
+
+.attachment {
+	padding: 9px 0 9px 38px;
+	border-bottom: 1px $gray-lighter solid;
+}
+
+.attachment-content {
+	display: inline-block;
+}
