--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -12,7 +12,7 @@
 			<!-- YUCK!! Hitting db in view! But cancancan needs active record model, so not sure how else to do this -->
 			<% this_comment = Comment.find(comment['id']) %>
 			<% if can? :destroy, this_comment %>
-			- <a href="#" class="comment-delete delete-link" val=<%="#{comment_path(comment['id'])}"%> data-content= '<%= render partial: "/layouts/confirm_delete", locals: { object: "Comment" } %>' >
+			- <a href="#" class="comment-delete delete-link" val=<%="#{comment_path(comment['id'])}"%> data-content= '<%= render partial: "/layouts/confirm_delete", locals: { object: "Comment" } %>' data-title="Delete Comment?">
 				Delete
 			</a>
 			<% end %>
