--- a/app/views/publication_requests/show.html.erb
+++ b/app/views/publication_requests/show.html.erb
@@ -1,6 +1,7 @@
 <%= stylesheet_link_tag "comments" %>
 <%= stylesheet_link_tag "request_attachments" %>
 <%= javascript_include_tag "comments" %>
+<%= javascript_include_tag "request_attachments" %>
 
 <div class="page-header">
 	<h1><%= @publication_request["event"] %></h1>
