--- a/app/views/request_attachments/_choose_type.html.erb
+++ b/app/views/request_attachments/_choose_type.html.erb
@@ -1,4 +1,4 @@
-<ul class="popup-list">
+<ul class="popup-list attachment-options">
 	<li class="uploader">
 		<%= link_to "Computer", "#", class: "fakefile" %>
 		<%= form_for([request, attachment], multipart: true) do |f| %>
