--- a/app/views/request_attachments/_show.html.erb
+++ b/app/views/request_attachments/_show.html.erb
@@ -1,4 +1,4 @@
-<div class="attachment">
+<div class="attachment" data-index=<%=index%>>
 	
 	<%= render partial: "/users/label", locals: { user: attachment['user'] } %>
 
