--- a/app/views/request_attachments/_modal.html.erb
+++ b/app/views/request_attachments/_modal.html.erb
@@ -1,5 +1,5 @@
 <div id="attachment-modal" class="modal">
-    <span class="close">x</span>
+    <span class="close glyphicon glyphicon-remove"></span>
     <img class="modal-content" id="img01">
     <div id="caption"></div>
 </div>
