--- a/app/views/request_attachments/_show.html.erb
+++ b/app/views/request_attachments/_show.html.erb
@@ -12,7 +12,7 @@
 			<div class="filename">
 				<%= attachment['file_file_name'] %>
 			</div>
-			<div>
+			<div class="details">
 				<%= "#{comment_date_format(datetime_from(attachment['created_at']))}" %>
 			</div>
 
