Added file size info to attachments

--- a/app/views/request_attachments/_show.html.erb
+++ b/app/views/request_attachments/_show.html.erb
@@ -13,7 +13,7 @@
 				<%= attachment['file_file_name'] %>
 			</div>
 			<div class="details">
-				<%= "#{comment_date_format(datetime_from(attachment['created_at']))}" %>
+				<%= "#{comment_date_format(datetime_from(attachment['created_at']))}" %> - <%= "#{file_size_string(attachment['file_file_size'])}" %>
 			</div>
 
 			<!-- YUCK!! Hitting db in view! But cancancan needs active record model, so not sure how else to do this -->
