Finally decided to just put file loading bar below comment form

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -32,3 +32,12 @@
 		background-color: $gray-lighter;
 	}
 }
+
+// .comment-footer {
+// 	position: relative;
+// }
+
+.progress {
+
+    margin-top: 10px;
+}
