--- a/app/views/publication_requests/show.html.erb
+++ b/app/views/publication_requests/show.html.erb
@@ -103,10 +103,12 @@
 					<%= f.label :content, "Add Comment", class: "control-label"%>
 					<%= f.text_area :content, class: "form-control", placeholder: "Write a comment...", rows: "3" %>
 				</div>
+				
 				<%= f.submit("Comment", id: "comment-btn", class: "btn btn-primary", remote: true, disabled: true) %>
 				<a class="attachment-btn" href="#" title="Add an attachment..." data-content= '<%= render( partial: "/request_attachments/choose_type", locals: { request: @publication_request_obj, attachment: @attachment } )%>'>
 					<span class="glyphicon glyphicon-paperclip"></span>
 				</a>
+				<%= render partial: 'layouts/progress_bar' %>
 			<% end %>
 			<hr>
 		</div>
