--- a/app/views/request_attachments/_show.html.erb
+++ b/app/views/request_attachments/_show.html.erb
@@ -5,7 +5,7 @@
 	<div class="attachment-content media">
 		<div class="media-left">
 			<% if is_image_file?(attachment['file_content_type']) %>
-				<%= image_tag(attachment['file_small'], class: "media-object", "data-orig" => attachment['file_original']) %>
+				<%= image_tag(attachment['file_large_thumb'], class: "media-object", "data-orig" => attachment['file_original']) %>
 			<% end %>
 		</div>
 		<div class="media-body media-middle">
