--- a/app/views/publication_requests/show.html.erb
+++ b/app/views/publication_requests/show.html.erb
@@ -7,6 +7,21 @@
 	<h1><%= @publication_request["event"] %></h1>
 </div>
 
+<div class="row workflow">
+	<div class="col-md-6">
+	  <div class="btn-group btn-group-lg">
+			<% @statuses.each do |status| %>
+				<% if status['name'] != @publication_request['status']['name'] %>
+					<button type="button" class="btn btn-default">
+						Set to <%= status["name"] %>
+					</button>
+				<% end %>
+			<% end %>
+	  </div>
+		<span class="label label-default"><%=@publication_request['status']['name']%></span>
+	</div>
+</div>
+
 <div class="row">
 	<div class="col-md-4 col-xs-4" id="chosen-template">
 		<div class="panel panel-default">
@@ -109,7 +124,7 @@
 					<%= f.label :content, "Add Comment", class: "control-label"%>
 					<%= f.text_area :content, class: "form-control", placeholder: "Write a comment...", rows: "3" %>
 				</div>
-				
+
 				<%= f.submit("Comment", id: "comment-btn", class: "btn btn-primary", remote: true, disabled: true) %>
 				<a class="attachment-btn" href="#" title="Add an attachment..." data-content= '<%= render( partial: "/request_attachments/choose_type", locals: { request: @publication_request_obj, attachment: @attachment } )%>'>
 					<span class="glyphicon glyphicon-paperclip"></span>
@@ -131,4 +146,3 @@
 </div>
 
 <%= render partial: '/request_attachments/modal', locals: { attachments: @publication_request["request_attachments"] } %>
-
