--- a/app/views/publication_requests/show.html.erb
+++ b/app/views/publication_requests/show.html.erb
@@ -13,12 +13,19 @@
 			<% @statuses.each do |status| %>
 				<% if status['name'] != @publication_request['status']['name'] %>
 					<button type="button" class="btn btn-default">
-						Set to <%= status["name"] %>
+						<% if @publication_request['status']['order'] > status['order'] %>
+							Back to
+						<% else %>
+							Move to
+						<% end %>
+						<%= status["name"] %>
 					</button>
 				<% end %>
 			<% end %>
 	  </div>
-		<span class="label label-default"><%=@publication_request['status']['name']%></span>
+		<span class="current-status">
+			<span class="label label-default" style="background-color: #<%=int_color_to_hex(@publication_request['status']['color'])%>"><%=@publication_request['status']['name']%></span>
+		</span>
 	</div>
 </div>
 
