--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -4,14 +4,17 @@
 
 <div class="statuses">
   <% @statuses.each do |status| %>
-    <div class="row">
-      <div class="col-md-4">
+    <div class="row status">
+      <div class="col-md-4 name">
         <span class="label label-default status-display" style="background-color: #<%=int_color_to_hex(status['color'])%>"><%=status['name']%></span>
       </div>
-      <div class="col-md-3">
-        Color
+      <div class="col-md-3 color">
+        <div class="input-group">
+          <span class="input-group-addon">Color</span>
+          <input type="text" class="form-control color" placeholder="">
+        </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 order">
         Order
       </div>
     </div>
