--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -6,7 +6,7 @@
   <% @statuses.each do |status| %>
     <div class="row status" data-id="<%=status['id']%>">
       <div class="col-md-4 name">
-        <span class="label label-default status-display" style="background-color: #<%=int_color_to_hex(status['color'])%>"><%=status['name']%></span>
+        <%= render partial: 'label', locals: { status: status } %>
       </div>
       <div class="col-md-3 color">
         <div class="input-group">
