--- a/app/views/publication_requests/_workflow.html.erb
+++ b/app/views/publication_requests/_workflow.html.erb
@@ -14,6 +14,6 @@
     <% end %>
   </div>
   <span class="current-status">
-    <span class="label label-default" style="background-color: #<%=int_color_to_hex(publication_request['status']['color'])%>"><%=publication_request['status']['name']%></span>
+    <%= render partial: 'statuses/label', locals: { status: publication_request['status'] } %>
   </span>
 </div>
