Downloaded minicolors source since gem wasn't working fully

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "jquery.minicolors";
+// @import "jquery.minicolors";
 
 .container-fluid {
 	overflow-y: scroll;
