--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,12 @@
   <title>PubsPortal</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag params[:controller] %>
+  <%= stylesheet_link_tag 'jquery.minicolors' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'freewall' %>
   <%= javascript_include_tag 'jstz.min' %>
   <%= javascript_include_tag 'rails-timezone.min' %>
+  <%= javascript_include_tag 'jquery.minicolors' %>
   <%= javascript_include_tag params[:controller] %>
   <%= csrf_meta_tags %>
 </head>
