Redid details layout for request and added x-editable for inline editing of fields

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "editable/bootstrap-editable";
 // @import "jquery.minicolors";
 
 .container-fluid {
