--- a/app/views/publication_requests/_workflow.html.erb
+++ b/app/views/publication_requests/_workflow.html.erb
@@ -13,7 +13,7 @@
       <% end %>
     <% end %>
   </div>
-  <span class="current-status">
+  <span class="current-status" hidden="hidden">
     <%= render partial: 'statuses/label', locals: { status: publication_request['status'] } %>
   </span>
 </div>
